--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
+    "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.6.0",
+    "react-jinke-music-player": "^4.24.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
