--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "autoprefixer": "^10.4.13",
+    "@openzeppelin/contracts": "^4.7.3",
     "hardhat": "^2.12.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
