--- a/package.json
+++ b/package.json
@@ -51,11 +51,23 @@
     ]
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "autoprefixer": "^10.4.13",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.7.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^9.1.0",
+    "autoprefixer": "^10.4.13",
+    "chai": "^4.2.0",
     "hardhat": "^2.12.2",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "solidity-coverage": "^0.8.1",
+    "tailwindcss": "^3.2.4",
+    "typechain": "^8.1.0"
   }
 }
